[package]
name = "unohup"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"
description = "A useful wrapper library for nohup"
repository = "https://github.com/moisutsu/unohup"
license = "MIT"
readme = "README.md"
# see https://crates.io/category_slugs
categories = ["command-line-utilities"]
# see https://crates.io/keywords
keywords = ["cli"]

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.33"
